Feat: criado nova rota retrieve user
