# src/routes/users.route.ts
@@ -1,5 +1,5 @@
 import {Router} from "express"
-import { createUserController, deleteUserController, listUsersController, updateUserController } from "../controllers/users.controller"
+import { createUserController, deleteUserController, listUsersController, retrieveUsercontroller, updateUserController } from "../controllers/users.controller"
 import { ensureDataIsValidMiddleware } from "../middlewares/ensureDataIsValid.middleware"
 import { userSchemaRequest, userSchemaUpdateRequest } from "../schemas/users.schema"
 import { ensureAuthMiddleware } from "../middlewares/ensureAuth.middleware"
@@ -8,6 +8,7 @@ const usersRoutes = Router()
 
 usersRoutes.post("", ensureDataIsValidMiddleware(userSchemaRequest), createUserController)
 usersRoutes.get("", listUsersController)
+usersRoutes.get("/self", ensureAuthMiddleware, retrieveUsercontroller)
 usersRoutes.patch("", ensureAuthMiddleware, ensureDataIsValidMiddleware(userSchemaUpdateRequest), updateUserController)
 usersRoutes.delete("", ensureAuthMiddleware, deleteUserController)
 
