# swagger.json
@@ -178,6 +178,49 @@
                 }
             }           
         },
+        "/users/self":{            
+            "get":{
+                "description": "List own user",  
+                "tags": ["Users"],  
+                "security": [
+                    {
+                        "bearerAuth":[]
+                    }
+                ],            
+                "responses":{
+                    "200":{
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/responseUser"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid token",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/responseUser401"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "token is missing",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/responseUser403"
+                                }
+                            }
+                        }
+                    }
+                }
+            }          
+        },
         "/login":{
             "post":{
                 "description": "User login",
